# tcc-back

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nohup.out
src/: application.rs  controllers.rs  di.rs  errors.rs  main.rs  port.rs  routes.rs
src/application/: mod.rs  models.rs  services.rs  utils.rs  validation.rs
src/application/middlewares/: auth_user.rs
src/application/models/: access_token.rs  json_token.rs  login.rs  solicitacao.rs  user.rs
src/application/services/: aluno_service.rs  auth_service.rs  gestor_service.rs  professor_service.rs  solicitacao_service.rs  turma_service.rs
src/application/utils/: user_scopes.rs
src/application/validation/: create_solicitacao_validation.rs  create_turma_validation.rs  create_user_validation.rs  update_solicitacao_validation.rs  update_turma_validation.rs  update_user_validation.rs
src/controllers/: aluno_controller.rs  auth_controller.rs  controller.rs  gestor_controller.rs  mod.rs  professor_controller.rs  solicitacao_controller.rs  turma_controller.rs
src/di/: d_injection.rs
src/infrastructure/: database.rs  repository.rs
src/infrastructure/database/: connection.rs  schemas.rs
src/infrastructure/repository/: aluno_repository.rs  auth_repository.rs  gestor_repository.rs  professor_repository.rs  user_repository.rs  (+2 more)
src/port/: contructor.rs  mod.rs  query.rs  query_filter.rs  repository.rs  service.rs
src/routes/: aluno.rs  auth.rs  gestor.rs  handler.rs  mod.rs  professor.rs  solicitacao.rs  turma.rs  user.rs
src/utils/: default.rs  functions.rs  mod.rs  settings.rs
(+4 files in other folders)
