[package]
name = "tcc-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = "1.0.192"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
dotenv = "0.15.0"
async-trait = "0.1.74"

[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = ["async-std-runtime"] 